--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <p align="center">
     <span class="bigBold">物流2101专用文件系统</span><br>
-    by 徐小雨<br>
+    by XXY<br>
     <a href="login.php">登录</a>
 </p>
 </body>
